// PC Gear Store - Database Schema
// Import file nay vao dbdiagram.io de xem so do ERD

Table users {
  id int [pk, increment]
  fullname varchar(100) [not null]
  email varchar(150) [unique, not null]
  password varchar(255) [not null, note: 'bcrypt hash']
  phone varchar(15)
  avatar varchar(255)
  role enum('admin', 'customer') [default: 'customer']
  address varchar(500)
  created_at timestamp [default: `now()`]
  updated_at timestamp
}

Table categories {
  id int [pk, increment]
  key_name varchar(30) [unique, not null, note: 'CPU, GPU, RAM...']
  label varchar(50) [not null, note: 'Ten hien thi']
  icon varchar(50) [not null, default: 'fa-tag']
  slug varchar(50) [unique, not null]
  sort_order int [default: 0]
}

Table brands {
  id int [pk, increment]
  name varchar(50) [unique, not null]
  logo varchar(255)
  slug varchar(50) [unique, not null]
}

Table products {
  id int [pk, increment]
  name varchar(200) [not null]
  slug varchar(220) [unique, not null]
  category_id int [not null, ref: > categories.id]
  brand_id int [not null, ref: > brands.id]
  price int [not null, note: 'VND']
  old_price int [note: 'Gia goc truoc giam']
  image varchar(255) [not null]
  badge enum('new', 'hot', 'sale', 'bestseller')
  badge_text varchar(30)
  spec_short varchar(255)
  description text
  stock int [default: 0]
  rating decimal(2,1) [default: 0.0]
  review_count int [default: 0]
  is_active boolean [default: true]
  created_at timestamp [default: `now()`]
  updated_at timestamp
}

Table product_images {
  id int [pk, increment]
  product_id int [not null, ref: > products.id]
  image_url varchar(255) [not null]
  sort_order int [default: 0]
}

Table product_specs {
  id int [pk, increment]
  product_id int [not null, ref: > products.id]
  spec_key varchar(50) [not null, note: 'Socket, TDP, Bus...']
  spec_value varchar(200) [not null, note: 'LGA1700, 65W...']
  sort_order int [default: 0]
}

Table cart_items {
  id int [pk, increment]
  user_id int [not null, ref: > users.id]
  product_id int [not null, ref: > products.id]
  quantity int [default: 1]
  created_at timestamp [default: `now()`]

  indexes {
    (user_id, product_id) [unique]
  }
}

Table wishlists {
  id int [pk, increment]
  user_id int [not null, ref: > users.id]
  product_id int [not null, ref: > products.id]
  created_at timestamp [default: `now()`]

  indexes {
    (user_id, product_id) [unique]
  }
}

Table coupons {
  id int [pk, increment]
  code varchar(30) [unique, not null]
  discount_percent int [not null]
  min_order_value int [default: 0]
  max_discount int
  usage_limit int
  used_count int [default: 0]
  valid_from date [not null]
  valid_to date [not null]
  is_active boolean [default: true]
}

Table orders {
  id int [pk, increment]
  user_id int [not null, ref: > users.id]
  order_code varchar(20) [unique, not null]
  subtotal int [not null]
  shipping_fee int [default: 0]
  discount int [default: 0]
  total int [not null]
  coupon_id int [ref: > coupons.id]
  receiver_name varchar(100) [not null]
  receiver_phone varchar(15) [not null]
  receiver_address text [not null]
  payment_method enum('cod', 'banking', 'momo') [default: 'cod']
  status enum('pending', 'confirmed', 'shipping', 'delivered', 'cancelled') [default: 'pending']
  note text
  created_at timestamp [default: `now()`]
  updated_at timestamp
}

Table coupon_usages {
  id int [pk, increment]
  coupon_id int [not null, ref: > coupons.id]
  user_id int [not null, ref: > users.id]
  order_id int [not null, ref: > orders.id]
  used_at timestamp [default: `now()`]

  indexes {
    (coupon_id, order_id) [unique]
    (user_id, used_at)
  }
}

Table order_items {
  id int [pk, increment]
  order_id int [not null, ref: > orders.id]
  product_id int [not null, ref: > products.id]
  product_name varchar(200) [not null, note: 'Snapshot ten SP luc mua']
  price int [not null, note: 'Snapshot gia luc mua']
  quantity int [not null]
}

Table reviews {
  id int [pk, increment]
  product_id int [not null, ref: > products.id]
  user_id int [not null, ref: > users.id]
  order_id int [ref: > orders.id]
  rating tinyint [not null, note: '1-5']
  comment text
  is_approved boolean [default: false]
  created_at timestamp [default: `now()`]
}

Table blog_posts {
  id int [pk, increment]
  title varchar(255) [not null]
  slug varchar(270) [unique, not null]
  excerpt text
  content longtext
  category varchar(50) [not null]
  author_id int [not null, ref: > users.id]
  image varchar(255)
  read_time int
  is_published boolean [default: false]
  published_at timestamp
  created_at timestamp [default: `now()`]
}
